0.5.7 2020-07-xx
    - Indicate position of parsing errors (Perl port) #15
    - Hide reader op() methods from backtrace
0.5.6 2020-07-13
    - Hide validate() methods from backtrace
    - Tweak multi candidate parse(_U:) and parse($) candidates;
      ensure all options are processed by the parser.
0.5.5 2020-07-07
    - Changed LibXML::HashMap node handling:
      -- Store nodes directly; avoid coercement to node-sets
      -- Remove XPathDomain subset (now the same as XPathRange)
0.5.4 2020-07-04
    - Add live object metrics to 11memory.t.
    - Add LibXML::Parser::Context.publish() method with early
      destruction of xmlParserCtxt objects. Reduce number of live
      objects and memory usage #45
0.5.3 2020-07-02
    - Add LibXML::HashMap; bindings to xmlHashTable.
    - Use it for node lists and sets associative interfaces #43
    - Fix double referencing of node-set elements #44
0.5.2 2020-06-18
    - Fix #42 .parent() on root element dying
0.5.1 2020-06-18
    - Fix #41 getElementsByXxxx() order scrambling (broken in 0.5.0)
0.5.0 2020-06-17
    - #36 fixed install failure / Dtd premature free issue
    - #38 Performance improvements and bench-marking
      -- Convert node and XPath object classes to CPointer representations. This
         allows for faster lower-memory thrifty stantation of objects via nativecast.
      -- .native() methods and options have globally renamed to .raw() ('native' no longer
          makes sense as both the inner [CStruct] and outer [CPointer] classes are both
          native variants).
      -- Optimised the getElementsByXxx() DOM methods. Changed from using XPath searches
        to custom binding functions [dom.c]
      -- Fixed thread-safety of LibXML::Node::List and LibXML::Node::Set iterators (see
         also https://github.com/Raku/doc/issues/3477)
0.4.0 2020-05-21
    - Fix $node.getOwner() method to return the root of the
      current node. Distinguish it from .getOwnerDocument